cmake_minimum_required(VERSION 3.15)
project(AEDA_Projeto)

set(CMAKE_CXX_STANDARD 17)

add_executable(AEDA_Projeto main.cpp sistemaCartaoAmigoMuseus.cpp sistemaCartaoAmigoMuseus.h CartaoAmigo.cpp CartaoAmigo.h Date.cpp Date.h Menus.cpp Menus.h Time.cpp Time.h Museum.cpp Museum.h SalaEspetaculo.cpp SalaEspetaculo.h Address.cpp Address.h Cliente.cpp Cliente.h Atracao.cpp Atracao.h Bilhete.cpp Bilhete.h Evento.cpp Evento.h)